<resources>
    <string name="app_name">Organizer</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_task_activity">Details</string>
    <string name="title_activity_editor">Event Editor</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Query</string>
    <string name="layout_eventName">Name des Eintrags</string>
    <string name="layout_hint_eventName">Name</string>
    <string name="layout_dateTime">Datum und Uhrzeit</string>
    <string name="layout_button_addNote">Notiz hinzufügen</string>
    <string name="layout_button_addAction">Aktion hinzufügen</string>
    <string name="layout_editor_descriptionhint">Description</string>
    <string name="layout_editor_notehint">Note</string>
    <string name="layout_editor_rememberlable">Notification delay</string>
    <string name="timePreset">12:00</string>
    <string name="editor_btn_picknotifydelay">none</string>
    <string name="editor_btn_chooseaction">Add Action</string>
    <string name="editor_btn_priority">Priority</string>
    <string name="editor_btn_saveevent">Add Note</string>
    <string name="editor_dialog_priority_title">Priority</string>
    <string name="search_no_result">Search returned no results</string>
    <string name="search_no_query">Query was empty</string>
    <string name="datepickPreview">27.09.2016</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_category">Category</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="timeEndPickerTitle">Ende</string>
    <string name="menuEdit">Edit</string>
    <string name="menuDelete">Löschen</string>
    <string name="cancelNotification">Benachrichtigung entfernen</string>
    <string name="createTestEvents">Erzeuge Testevents</string>
    <string name="switchAllDayText">Ganztägiges Ereignis</string>
    <string name="categoryText">Kategorie</string>
    <string name="tagListEmpty">Keine Tags</string>
    <string name="eventtitle">Title</string>
    <string name="eventdescription">Description</string>
    <string name="execute_action">Execute Action</string>
    <string name="delete">Delete</string>
    <string name="remember_interval_min">Remember interval (min)</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="defaultTime">12:00</string>
    <string name="defaultTime2">13:00</string>
    <string name="eventlist_row_tv_text">TextView</string>
    <string name="eventlist_row_category_text">category</string>
    <string name="weekViewEventTitle">Event</string>
    <string name="weekViewEventTime">Time</string>
    <string name="close">Schließen</string>
</resources>
