<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="de.grau.organizer.activities.TaskActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_task_activity"
                android:textColor="@android:color/white"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="10dp" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>



    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_edit"
        android:id="@+id/task_btn_change" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:clipToPadding="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp">

            <TextView
                android:text="@string/eventtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/task_tv_title"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textSize="30sp" />

            <View
                android:background="@drawable/divider_horizontal"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                android:text="@string/eventdescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/task_tv_description"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textSize="20sp" />

            <View
                android:background="@drawable/divider_horizontal"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:drawableLeft="@drawable/ic_event_date_24dp"
                        android:text="@string/datepickPreview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/task_tv_startDate"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textColor="?attr/colorAccent" />


                    <TextView
                        android:text="@string/timePreset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:id="@+id/task_tv_startTIme"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textColor="?attr/colorAccent" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:drawableLeft="@drawable/ic_event_date_reverse_24dp"
                    android:text="@string/datepickPreview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/task_tv_endDate"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:text="@string/timePreset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/task_tv_endTime"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:background="@drawable/divider_horizontal"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                android:text="@string/layout_editor_notehint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/task_tv_notes"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textSize="20sp" />

            <View
                android:layout_marginTop="10dp"
                android:background="@drawable/divider_horizontal"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/task_tv_duration_description"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/task_tv_duration_value"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/time_to_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/task_tv_time_to_event_description"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/task_tv_time_to_event_value"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_marginTop="10dp"
                android:background="@drawable/divider_horizontal"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:drawableLeft="@drawable/ic_action_phone_24dp"
                    android:text="@string/execute_action"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/task_btn_executeaction"
                    android:layout_weight="1" />

                <Button
                    android:drawableLeft="@drawable/ic_delete_black_24dp"
                    android:text="@string/delete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/task_btn_delete"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
